2007-05-07  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_button):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	(22:48:08) thos: Cimi, it is difficult when I am doing 100 things at once :)
	Thos is not multitasking :D
	(AKA useless commit to show shadows on buttons)

2007-05-07  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_button):
	Is it correct as I've added a left inner shadow?
	Benzea please take a look ;)

2007-05-07  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_button),
	(clearlooks_glossy_draw_progressbar_trough):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	Added comments /* code */ to try buttons with a shadow instead the inset

2007-05-07  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_highlight_and_shade), (clearlooks_draw_frame),
	(clearlooks_draw_separator), (clearlooks_draw_toolbar),
	(clearlooks_draw_menubaritem):
	Toolbar now uses bg[NORMAL]
	Adjust some shades

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_draw_button_gloss),
	(clearlooks_glossy_draw_light_inset),
	(clearlooks_glossy_draw_button),
	(clearlooks_glossy_draw_menubaritem):
	Adjust inset for inactive buttons
	More hilight on inactive buttons (less usable?)
	Menubar item now has rounded support

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_layout), (clearlooks_style_class_init):
	Now the shadow on inactive text is a shade of the bg,
	Fix rendering with dark themes
	
	* engines/clearlooks/src/support.c: (clearlooks_get_parent_bg):
	Few tweaks to get the correct parentbg

2007-05-06  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c: