@@ -460,8 +460,8 @@ clearlooks_style_draw_box (DRAW_ARGS)
 		else
 		{
 			params.corners    = CR_CORNER_ALL;
-			if (!(ge_is_combo_box (widget, FALSE)))
-				params.enable_glow = TRUE;
+			/* if (!(ge_is_combo_box (widget, FALSE))) */
+			params.enable_glow = TRUE;
 		}		
 	
 		if (GE_IS_TOGGLE_BUTTON (widget) &&
